# server/src/main/java/fr/mightycode/cpoo/server/DomainMessageListener.java
@@ -16,8 +16,11 @@ public class DomainMessageListener implements RouterService.MessageListener {
   @Value("${cpoo.server.domain}")
   private String serverDomain;
 
-  @Value("${cpoo.router.url}")
-  private String routerUrl;
+  @Value("${cpoo.router.ws.url}")
+  private String routerWSUrl;
+
+  @Value("${cpoo.router.sse.url}")
+  private String routerSSEUrl;
 
   private final MessageService messageService;
 
@@ -27,13 +30,35 @@ public class DomainMessageListener implements RouterService.MessageListener {
   }
 
   @Override
-  public String getRouterUrl() {
-    return routerUrl;
+  public String getRouterWSUrl() {
+    return routerWSUrl;
   }
 
   @Override
-  public void onMessageReceived(RouterService.Message routerMessage) {
-    log.info("Storing message received from router: {}", routerMessage);
-    messageService.storeMessage(new Message(routerMessage));
+  public String getRouterSSEUrl() {
+    return routerSSEUrl;
+  }
+
+  @Override
+  public synchronized void onMessageReceived(RouterService.Message routerMessage) {
+
+    log.info("Message received from router {}", routerMessage);
+
+    // If the message is not already stored (it may have been routed using both WS and SSE)
+    Message message = messageService.findById(routerMessage.id()).orElse(null);
+    if (message != null) {
+      log.warn("Message {} already stored... discarded");
+      return;
+    }
+
+    // Store the message
+    message = messageService.storeMessage(new Message(routerMessage));
+
+    // Notify the message to the recipient (since he is part of the domain)
+    messageService.notifyMessageTo(message, message.getTo());
+
+    // Notify the message to the sender if he is part of the domain
+    if (message.getFrom().endsWith("@" + serverDomain))
+      messageService.notifyMessageTo(message, message.getFrom());
   }
 }
