# server/src/main/java/fr/mightycode/cpoo/server/dto/MessageDTO.java
@@ -1,11 +1,35 @@
+//package fr.mightycode.cpoo.server.dto;
+//
+//import java.time.LocalDateTime;
+//import java.util.UUID;
+//
+//import fr.mightycode.cpoo.server.service.RouterService;
+//
+//public record MessageDTO(UUID msgID, String recipientID, String content, String authorID, String authorAddress,
+//                         LocalDateTime date, boolean edited){
+//
+//}
+
 package fr.mightycode.cpoo.server.dto;
 
-import java.time.LocalDateTime;
+import fr.mightycode.cpoo.server.model.Message;
+import fr.mightycode.cpoo.server.service.RouterService;
+import jakarta.validation.constraints.Email;
+import jakarta.validation.constraints.NotEmpty;
+
 import java.util.UUID;
 
-import fr.mightycode.cpoo.server.service.RouterService;
+public record MessageDTO(@NotEmpty UUID id, long timestamp, @NotEmpty @Email String from, @NotEmpty @Email String to,
+                         @NotEmpty String type, @NotEmpty String body) {
 
-public record MessageDTO(UUID msgID, String recipientID, String content, String authorID, String authorAddress,
-                         LocalDateTime date, boolean edited){
+  // Build a message DTO from a router message
+  public MessageDTO(RouterService.Message message) {
+    this(message.id(), message.timestamp(), message.from(), message.to(), message.type(), message.body());
+  }
 
+  // Build a message DTO from a model message
+  public MessageDTO(Message message) {
+    this(message.getId(), message.getTimestamp(), message.getFrom(), message.getTo(), message.getType(), message.getBody());
+  }
 }
+
